--- a/RouteTracker/app/src/main/AndroidManifest.xml
+++ b/RouteTracker/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dissertation.routetracker" android:targetSandboxVersion="1">
+    package="dissertation.routetracker"
+    android:targetSandboxVersion="1">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RouteTracker"
         android:usesCleartextTraffic="true">
-        <activity android:name=".restuarant">
+        <activity android:name=".Route" />
+        <activity android:name=".Room_Map">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
